2002-10-31  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ODESFunc.h (ODESFunc::ODES_fsub, ODESFunc::ODES_bsub,
	ODESFunc::ODES_jsub): Reorder args for consistency with other
	solvers.
	* ODESSA.cc: Fix all callers.

	* mx-inlines.cc (MX_BASE_REDUCTION_OP): Also return scalar
	MT_RESULT if nr == 1 && nc == 0 && dim == -1 (i.e.,
	sum(zeros(1,0)) returns 0, not [](1x0)).

2002-10-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (LINK_DEPS): Include $(FLIBS) here too.

2002-10-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DASRT.cc (DASRT::integrate): Fix computation of lrw
	(ddasrt_f): Combine loops.

	* NLEqn.cc (NLEqn::solve): Return current estimate of solution
	instead of empty vector if user termninates iteration.

2002-10-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-utils.cc (read_inf_nan_na, octave_read_double,
	octave_read_complex, octave_write_double, octave_write_complex):
	New functions.
	* CMatrix.cc (operator << (std::ostream&, const ComplexMatrix&)):
	Use octave_write_complex.
	(operator >> (std::istream&, const ComplexMatrix&)):
	Use octave_read_complex.
	* dMatrix.cc (operator << (std::ostream&, double)):
	Use octave_write_double.
	(operator >> (std::istream&, double)): Use octave_read_double.

2002-10-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-kpse.c (octave_kpse_clear_dir_cache): Delete.
	* oct-kpse.h: Delete decl.
	* pathsearch.cc (dir_path::init): Delete unnecessary call to
	::octave_kpse_clear_dir_cache.

2002-10-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* lo-sstream.h: Undef HAVE_SSTREAM if using a version of g++
	earlier than 3.0.

	* Makefile.in (LINK_DEPS): Include $(LIBKPATHSEA) here.
	(liboctave.$(SHLEXT)): Not here.

2002-10-17  Paul Kienzle <pkienzle@users.sf.net>

	* oct-shlib.cc (octave_w32_shlib): New class to support Windows.

2002-10-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (install-lib): Don't bother with versions for
	$(SHLBIN) files.

2002-10-16  Paul Kienzle <pkienzle@users.sf.net>
