@@ -1,3 +1,9 @@
+2002-11-01  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* Array2.cc (Array2<T>::get_size): #define MALLOC_OVERHEAD to
+	avoid OS X linker bug.
+	* ArrayN.cc (ArrayN<T>::get_size): Likewise.
+
 2002-10-31  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* ODESFunc.h (ODESFunc::ODES_fsub, ODESFunc::ODES_bsub,
